AP-20799: Fix aborted updates shared components/metanodes within components/metanodes.
Also fix bulk changes of metanode templates that are nested in components/metanodes.
Also fix isEnabled method of the check update meta node link action.

AP-20799 (Shared Component in not-shared Component not updated)